<resources>
    <string name="app_name">themeui</string>
    <string name="next_page">Next Page</string>
    <string name="card_view_page">Card View Page</string>
    <string name="previous_page">Previous page</string>
    <string name="contact_image">Contact Image</string>
    <string name="krishna">Krishna</string>
    <string name="contact_number">Contact Number</string>
    <string name="android_developer">Android Developer</string>
    <string name="moti_kumar_yadav">Moti Kumar Yadav</string>
    <string name="this_is_my_image">This is my image</string>
    <string name="open_dialog_button">Open Dialog Button</string>
    <string name="add_contact">Add contact</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_contact">Enter contact</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="update_contact">Update contact</string>
    <string name="opt_new">New</string>
    <string name="opt_open">Open</string>
    <string name="opt_save">Save</string>
    <string name="this_is_an_indian_flag">This is an indian flag.</string>
    <string name="jay_hind_jay_bharat">JAY HIND, JAY BHARAT !!</string>
    <string name="show_toast">Show toast</string>
    <string name="title_activity_alert_dialog">AlertDialogActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alert_dialog_page">Alert Dialog Page</string>
    <string name="single_button_dialog_box">Single button dialog box</string>
    <string name="double_button_dialog_box">Double button dialog box</string>
    <string name="three_button_dialog_box">Three button dialog box</string>
    <string name="custom_dialog_icon">Custom dialog icon</string>
    <string name="success">Success</string>
    <string name="the_custom_dialog_absolutely_working_fine">The custom dialog absolutely working fine.</string>
    <string name="show_custom_dialog">Show custom dialog</string>
    <string name="close">Close</string>
    <string name="dial">Dial</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="move_to_implicit_activity">Move to implicit activity</string>
</resources>