<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/add_bg"
    tools:context=".AlertDialogActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_button_dialog_box"
        android:onClick="showSingleButtonDialog"
        android:backgroundTint="#FF9800"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_button_dialog_box"
        android:onClick="showDoubleButtonDialog"
        android:backgroundTint="#2196F3"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_button_dialog_box"
        android:onClick="showThreeButtonDialog"
        android:backgroundTint="#673AB7"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_custom_dialog"
        android:onClick="showCustomDialog"
        android:backgroundTint="#009688"
        />
</LinearLayout>