<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#1E30F6"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/baseline_cloud_done_24"
        android:contentDescription="@string/custom_dialog_icon"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#FF212121"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_custom_dialog_absolutely_working_fine"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#FF111111"
            android:layout_margin="3dp"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/close_dialog"
        android:layout_margin="5dp"
        android:backgroundTint="#F44336"
        />

</LinearLayout>