<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/add_bg"
    android:padding="21dp"
    android:layout_margin="10dp"
    android:minWidth="380dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_contact"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#fff000"
        android:id="@+id/editTitle"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enter_name"
        android:background="@color/cardview_light_background"
        android:padding="11dp"
        android:id="@+id/editName"
        android:layout_marginBottom="11dp"
        android:inputType="textPersonName"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/enter_contact"
        android:background="@color/cardview_light_background"
        android:padding="11dp"
        android:id="@+id/editContact"
        android:layout_marginBottom="11dp"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/actionBtn"
        android:layout_marginTop="11dp"
        android:layout_gravity="end"
        />



</LinearLayout>