<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/llRow"
            android:padding="11dp"
            >
            
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#C6F492"
                android:id="@+id/contactImg"
                android:contentDescription="@string/contact_image"
                android:src="@drawable/ic_launcher_foreground"
            />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:orientation="vertical"
            >
                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/krishna"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/contactTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number"
                    android:textSize="16sp"
                    />

            </LinearLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

</LinearLayout>