<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mytoolbar"
        />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_to_implicit_activity"
                android:id="@+id/implicitActivity"
                android:onClick="moveToImplicitActivity"
                android:layout_margin="5dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_page"
                android:id="@+id/alertDialogPage"
                android:onClick="moveToDialogPage"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                android:id="@+id/next_page"
                android:onClick="handleOnClick"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/MyTextBold"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_bg"
                android:layout_margin="10dp"
                android:text="@string/next_page"
                android:onClick="handleOnClick"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/color_saffron"
                    android:id="@+id/color_saffron"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:layout_below="@+id/color_saffron"
                    android:id="@+id/color_white"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/color_white"
                    android:background="@color/color_green"
                    />

                <View
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/line_bg"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indian_flag"
                android:layout_margin="10dp"
                android:contentDescription="@string/this_is_an_indian_flag"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_toast"
                android:layout_margin="10dp"
                android:onClick="handleOnClickToastButton"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>